--- a/Szperacz.Wpf/App.xaml
+++ b/Szperacz.Wpf/App.xaml
@@ -1,9 +1,10 @@
-﻿<Application x:Class="SzperaczUI.App"
+﻿<views:MvxApplication x:Class="Szperacz.Wpf.App"
+             xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SzperaczUI"
+             xmlns:local="clr-namespace:Szperacz.Wpf"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
-</Application>
+</views:MvxApplication>
