--- a/Szperacz.Wpf/MainWindow.xaml
+++ b/Szperacz.Wpf/MainWindow.xaml
@@ -1,12 +1,13 @@
-﻿<Window x:Class="SzperaczUI.MainWindow"
+﻿<views:MvxWindow x:Class="Szperacz.Wpf.MainWindow"
+        xmlns:views="clr-namespace:MvvmCross.Platforms.Wpf.Views;assembly=MvvmCross.Platforms.Wpf"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SzperaczUI"
+        xmlns:local="clr-namespace:Szperacz.Wpf"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Szperacz" Height="450" Width="800">
     <Grid>
-        
+
     </Grid>
-</Window>
+</views:MvxWindow>
