--- a/Szperacz.Wpf/Views/MainView.xaml
+++ b/Szperacz.Wpf/Views/MainView.xaml
@@ -10,6 +10,8 @@
              d:DesignHeight="450" d:DesignWidth="800" FontSize="20">
     <Grid>
         <StackPanel Margin="10">
+            <Button mvx:Bi.nd="Command ChangeViewCommand" Margin="140 0 140 20" Content="Change View"/>
+
             <TextBlock Text="{Binding FullName}" FontSize="28" Margin="0 0 0 20"/>
             
             <TextBlock Text="First Name"/>
@@ -18,8 +20,8 @@
             <TextBlock Text="Last Name"/>
             <TextBox Text="{Binding LastName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="0 0 0 20"/>
 
-            <Button mvx:Bi.nd="Command AddGuestCommand" IsEnabled="{Binding CanAddGuest}" Margin="140 0 140 20">Add guest</Button>
-            <DataGrid ItemsSource="{Binding PersonList}" AutoGenerateColumns="True"></DataGrid>
+            <Button mvx:Bi.nd="Command AddGuestCommand" IsEnabled="{Binding CanAddGuest}" Margin="140 0 140 20" Content="Add guest"/>
+            <DataGrid ItemsSource="{Binding PersonList}" AutoGenerateColumns="True" Margin="0 0 0 20"/>
         </StackPanel>
     </Grid>
 </views:MvxWpfView>
