--- a/Szperacz.Wpf/Views/MainView.xaml
+++ b/Szperacz.Wpf/Views/MainView.xaml
@@ -6,22 +6,18 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Szperacz.Wpf.Views"
-             mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800" FontSize="20">
+             mc:Ignorable="d"
+             d:Height="720" d:Width="1280" FontSize="20" Background="White">
     <Grid>
-        <StackPanel Margin="10">
-            <Button mvx:Bi.nd="Command ChangeViewCommand" Margin="140 0 140 20" Content="Change View"/>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        
+        <!-- Column 1 -->
+        <Label Grid.Column="0" Content="Wyszukiwanie"/>
 
-            <TextBlock Text="{Binding FullName}" FontSize="28" Margin="0 0 0 20"/>
-            
-            <TextBlock Text="First Name"/>
-            <TextBox Text="{Binding FirstName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="0 0 0 20"/>
-            
-            <TextBlock Text="Last Name"/>
-            <TextBox Text="{Binding LastName, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Margin="0 0 0 20"/>
-
-            <Button mvx:Bi.nd="Command AddGuestCommand" IsEnabled="{Binding CanAddGuest}" Margin="140 0 140 20" Content="Add guest"/>
-            <DataGrid ItemsSource="{Binding PersonList}" AutoGenerateColumns="True" Margin="0 0 0 20"/>
-        </StackPanel>
+        <!-- Column 2 -->
+        <Label Grid.Column="1" Content="Wykresy"/>
     </Grid>
 </views:MvxWpfView>
