--- a/Szperacz.Wpf/MainWindow.xaml
+++ b/Szperacz.Wpf/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Szperacz.Wpf"
         mc:Ignorable="d"
-        Title="Szperacz" Height="720" Width="1280">
+        Title="Szperacz" Height="720" Width="1280" MinWidth="700" MinHeight="450">
     <Grid>
 
     </Grid>
