--- a/Szperacz.Wpf/Controls/ExplorerBoxFolder.xaml
+++ b/Szperacz.Wpf/Controls/ExplorerBoxFolder.xaml
@@ -1,8 +1,9 @@
-﻿<UserControl x:Class="Szperacz.Wpf.Controls.ExplorerBox"
+﻿<UserControl x:Class="Szperacz.Wpf.Controls.ExplorerBoxFolder"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mvx="clr-namespace:MvvmCross.Platforms.Wpf.Binding;assembly=MvvmCross.Platforms.Wpf"
              xmlns:local="clr-namespace:Szperacz.Wpf.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="30" d:DesignWidth="400"
@@ -10,9 +11,10 @@
     <Grid x:Name="gridExplorer">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="{Binding ElementName=combo, Path=ActualHeight}"/>
+            <ColumnDefinition Width="4*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        
+
         <!-- Column 0 -->
         <ComboBox x:Name="combo" Grid.Column="0" Padding="40 0"
                   ItemsSource="{Binding ExItemSource, ElementName=ExplorerWindow, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" SelectionChanged="combo_SelectionChanged">
@@ -31,14 +33,14 @@
                 </Style>
             </ComboBox.ItemContainerStyle>
         </ComboBox>
-        
+
         <!-- Column 1 -->
         <Border Grid.Column="1">
             <Grid>
                 <TextBlock x:Name="textBlockWatermark" Background="White" 
                            VerticalAlignment="Center" Padding="5 6" Foreground="Gray"
                            Text="{Binding TextWatermark, ElementName=ExplorerWindow, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                
+
                 <TextBox x:Name="textBoxPath" AutoWordSelection="True" Background="Transparent"
                          TextWrapping="Wrap" VerticalAlignment="Center" VerticalContentAlignment="Center"
                          GotFocus="textBoxPath_GotFocus" LostFocus="textBoxPath_LostFocus"
@@ -49,6 +51,9 @@
                 </TextBox>
             </Grid>
         </Border>
-                
+
+        <!-- Column 2 -->
+        <Button x:Name="button" Grid.Column="2" Content="Wybierz" Margin="20 0 0 0" 
+                mvx:Bi.nd="{Binding ButtonClick, ElementName=ExplorerWindow, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
     </Grid>
 </UserControl>
