--- a/Szperacz.Wpf/Views/MainView.xaml
+++ b/Szperacz.Wpf/Views/MainView.xaml
@@ -45,17 +45,12 @@
         </StackPanel>
 
         <!-- Column 1, Row 2 -->
-        <StackPanel Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center">
-            <!--<Button Grid.Column="0" MinWidth="60" Margin="0 0 20 0" Height="30"
-                    mvx:Bi.nd="Command FolderCommand">
-            </Button>-->
-            <cl:ExplorerBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" 
-                        VerticalAlignment="Center" HorizontalAlignment="Center"
-                        TextWatermark="Ścieżka"
-                        Width="{Binding ElementName=listBoxPaths, Path=ActualWidth}"
-                        ExItemSource="{Binding PathHistoryList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                        TextInside="{Binding Path, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-        </StackPanel>
+        <cl:ExplorerBoxFolder Grid.Column="1" Grid.Row="2" Grid.ColumnSpan="2" TextWatermark="Ścieżka"
+                              VerticalAlignment="Center" HorizontalAlignment="Center"
+                              ButtonClick="Command FolderCommand"
+                              Width="{Binding ElementName=listBoxPaths, Path=ActualWidth}"
+                              ExItemSource="{Binding PathHistoryList, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                              TextInside="{Binding Path, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
 
         <!-- Column 1, Row 3 -->
         <cl:ExplorerBox Grid.Column="1" Grid.Row="3" Grid.ColumnSpan="2" 
