--- a/Szperacz.Wpf/Controls/ExplorerBoxFolder.xaml
+++ b/Szperacz.Wpf/Controls/ExplorerBoxFolder.xaml
@@ -4,6 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:mvx="clr-namespace:MvvmCross.Platforms.Wpf.Binding;assembly=MvvmCross.Platforms.Wpf"
+             xmlns:ic="clr-namespace:Szperacz.Wpf.Icons"   
              xmlns:local="clr-namespace:Szperacz.Wpf.Controls"
              mc:Ignorable="d" 
              d:DesignHeight="30" d:DesignWidth="400"
@@ -21,7 +22,7 @@
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <StackPanel Orientation="Horizontal">
-                        <Ellipse Width="15" Height="15" Fill="Gold" Margin="0 0 4 0"/>
+                        <ic:FolderIcon Margin="0 0 5 0"/>
                         <TextBlock Text="{Binding}" MaxWidth="{Binding ElementName=gridExplorer, Path=ActualWidth}"/>
                     </StackPanel>
                 </DataTemplate>
@@ -29,7 +30,7 @@
             <ComboBox.ItemContainerStyle>
                 <Style TargetType="ComboBoxItem">
                     <Setter Property="Margin" Value="0"/>
-                    <Setter Property="Padding" Value="7 0 40 0"/>
+                    <Setter Property="Padding" Value="5 0 40 0"/>
                 </Style>
             </ComboBox.ItemContainerStyle>
         </ComboBox>
@@ -37,10 +38,14 @@
         <!-- Column 1 -->
         <Border Grid.Column="1">
             <Grid>
-                <TextBlock x:Name="textBlockWatermark" Background="White" 
+                <Border Background="White"/>
+
+                <!-- Watermark -->
+                <TextBlock x:Name="textBlockWatermark" Background="Transparent" 
                            VerticalAlignment="Center" Padding="5 6" Foreground="Gray"
                            Text="{Binding TextWatermark, ElementName=ExplorerWindow, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-
+                
+                <!-- UserText -->
                 <TextBox x:Name="textBoxPath" AutoWordSelection="True" Background="Transparent"
                          TextWrapping="Wrap" VerticalAlignment="Center" VerticalContentAlignment="Center"
                          GotFocus="textBoxPath_GotFocus" LostFocus="textBoxPath_LostFocus"
@@ -53,7 +58,9 @@
         </Border>
 
         <!-- Column 2 -->
-        <Button x:Name="button" Grid.Column="2" Content="Wybierz" Margin="20 0 0 0" 
-                mvx:Bi.nd="{Binding ButtonClick, ElementName=ExplorerWindow, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+        <Button x:Name="button" Grid.Column="2" Margin="20 0 0 0" 
+                mvx:Bi.nd="{Binding ButtonClick, ElementName=ExplorerWindow, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+            <ic:FolderIcon/>
+        </Button>
     </Grid>
 </UserControl>
