--- a/Szperacz.Wpf/Views/MainView.xaml
+++ b/Szperacz.Wpf/Views/MainView.xaml
@@ -8,7 +8,7 @@
              xmlns:cl="clr-namespace:Szperacz.Wpf.Controls"   
              xmlns:local="clr-namespace:Szperacz.Wpf.Views"
              mc:Ignorable="d"
-             d:Height="720" d:Width="1280" FontSize="16" Background="White">
+             d:Height="720" d:Width="1280" FontSize="16" Background="White" FontFamily="Bahnschrift">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"/> 
@@ -88,7 +88,9 @@
 
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <cl:SearchResultControl PathResult="{Binding PhraseAmount}"/>
+                    <cl:SearchResultControl PathResult="{Binding Path}" 
+                                            PhraseAmountResult="{Binding PhraseAmount}" 
+                                            MatchPhraseResult="{Binding MatchingPhrases}"/>
                 </DataTemplate>
             </ListBox.ItemTemplate>
         </ListBox>
@@ -115,6 +117,13 @@
         <!-- Column 5, Row 2 -->
         <Border Grid.Column="5" Grid.Row="3" Grid.RowSpan="6" Grid.ColumnSpan="2" Padding="15">
             <Image Source="{Binding Chart3Path}"/>
+        </Border>
+
+        <!-- Column 1, Row 8 (ALERT) -->
+        <Border Grid.Column="1" Grid.Row="1" Grid.RowSpan="1" Grid.ColumnSpan="6" Padding="0" 
+                VerticalAlignment="Center" Opacity="0.9" Visibility="{Binding MessageBoxVisibility}"
+                BorderBrush="Gray" BorderThickness="1" Background="LightGoldenrodYellow">
+            <TextBlock Text="{Binding MessageBoxText}" TextAlignment="Center" FontSize="20" FontWeight="Bold" Padding="5"/>
         </Border>
     </Grid>
 </views:MvxWpfView>
