--- a/Szperacz.Wpf/Views/MainView.xaml
+++ b/Szperacz.Wpf/Views/MainView.xaml
@@ -121,7 +121,8 @@
 
         <!-- Column 1, Row 8 (ALERT) -->
         <Border Grid.Column="1" Grid.Row="1" Grid.RowSpan="1" Grid.ColumnSpan="6" Padding="0" 
-                VerticalAlignment="Center" Opacity="0.9" Visibility="{Binding MessageBoxVisibility}"
+                VerticalAlignment="Center" Opacity="0.9" 
+                Height="{Binding MessageBoxVisibility}"
                 BorderBrush="Gray" BorderThickness="1" Background="LightGoldenrodYellow">
             <TextBlock Text="{Binding MessageBoxText}" TextAlignment="Center" FontSize="20" FontWeight="Bold" Padding="5"/>
         </Border>
