--- a/Szperacz.Wpf/MainWindow.xaml
+++ b/Szperacz.Wpf/MainWindow.xaml
@@ -4,9 +4,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:p="clr-namespace:Szperacz.Wpf.Properties"           
         xmlns:local="clr-namespace:Szperacz.Wpf"
         mc:Ignorable="d"
-        Title="Szperacz" Height="720" Width="1280" MinWidth="700" MinHeight="450" WindowStartupLocation="CenterScreen">
+        Title="{x:Static p:Resources.AppName}" Height="720" Width="1280" MinWidth="700" MinHeight="450" WindowStartupLocation="CenterScreen">
     <Grid>
 
     </Grid>
