--- a/Szperacz.Wpf/Controls/WarningBox.xaml
+++ b/Szperacz.Wpf/Controls/WarningBox.xaml
@@ -3,14 +3,10 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:p="clr-namespace:Szperacz.Wpf.Properties"   
              xmlns:local="clr-namespace:Szperacz.Wpf.Controls"
-             mc:Ignorable="d">
+             mc:Ignorable="d" Name="WarningWindow">
     <Grid>
-        <Border Padding="0" Height="0"
-                VerticalAlignment="Center" Opacity="0.9" 
-                BorderBrush="Gray" BorderThickness="1" Background="LightGoldenrodYellow">
-        </Border>
-        <TextBlock x:Name="textBlock" d:Text="Tekstowo" TextAlignment="Center" FontSize="18" 
-                       FontWeight="Bold" Padding="5"/>
+        
     </Grid>
 </UserControl>
