--- a/Szperacz.Wpf/Controls/SearchResultControl.xaml
+++ b/Szperacz.Wpf/Controls/SearchResultControl.xaml
@@ -33,7 +33,7 @@
                   Loaded="comboBoxPhrases_Loaded"/>
 
         <Button x:Name="OpeningFile" Content="Otwórz" FontSize="15" Grid.Column="2"
-                Grid.Row="0" MaxHeight="30" Width="70"
-                    Margin="10,0,0,0" Grid.RowSpan="2" Click="OpeningFile_Click"/>
+                Grid.Row="0" MaxHeight="30" Width="70" Margin="10,0,0,0" Grid.RowSpan="2" 
+                Click="OpeningFile_Click"/>
     </Grid>
 </UserControl>
